# random_forest

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  api.py  benchmarks.py  engine.cpp  prep_data.py  requirements.txt  test_rf.py
backend/: CMakeLists.txt  api.py
backend/include/: random_forest.hpp
backend/src/: bindings.cpp  random_forest.cpp
data/: clean_football_data.csv  prep_data.py  test.py  test_rf.py  train.csv
frontend/: app.js  index.html
include/: random_forest.hpp
src/: bindings.cpp  random_forest.cpp
